Bus: Allow providers to (partially) lock the bus

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,15 @@ add_executable(gbtest
         src/main.cpp
         src/cpu/LR35902.cpp
         src/cpu/LR35902.h
+        src/exceptions/bus/BusLockedAddressException.cpp
+        src/exceptions/bus/BusLockedAddressException.h
+        src/memory/Memory.cpp
+        src/memory/Memory.h
         src/platform/bus/Bus.cpp
         src/platform/bus/Bus.h
         src/platform/GameBoy.cpp
         src/platform/GameBoy.h
-        src/platform/bus/BusProvider.h src/memory/Memory.cpp src/memory/Memory.h)
+        src/platform/bus/BusProvider.h)
 
 target_link_libraries(gbtest raylib)
 
