Tickable: Add interface for classes that can be ticked

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,8 @@ add_executable(gbtest
         src/platform/bus/BusProvider.h
         src/platform/bus/BusRequestSource.h
         src/ppu/oam/OAMDMA.cpp
-        src/ppu/oam/OAMDMA.h)
+        src/ppu/oam/OAMDMA.h
+        src/utils/Tickable.h)
 
 target_link_libraries(gbtest raylib)
 
