--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_executable(gbtest
         src/ppu/vram/VRAMTileData.h
         src/ppu/vram/VRAMTileMaps.cpp
         src/ppu/vram/VRAMTileMaps.h
+        src/ppu/PPURegisters.h
         src/utils/Tickable.h
         src/main.cpp)
 
