Fetcher: Keep a reference to the PPU registers and VRAM BackgroundFetcher: Began work on the BG/Window pixel fetcher, implemented 1st and 4th states

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ add_executable(gbtest
         src/platform/GameBoy.h
         src/platform/bus/BusProvider.h
         src/platform/bus/BusRequestSource.h
+        src/ppu/fifo/BackgroundFetcher.cpp
+        src/ppu/fifo/BackgroundFetcher.h
         src/ppu/fifo/Fetcher.h
         src/ppu/fifo/Fetcher.cpp
         src/ppu/fifo/FetcherState.h
