--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,8 @@ add_executable(gbtest
         src/ppu/vram/VRAMTileData.h
         src/ppu/vram/VRAMTileMaps.cpp
         src/ppu/vram/VRAMTileMaps.h
+        src/ppu/PPU.cpp
+        src/ppu/PPU.h
         src/ppu/PPURegisters.h
         src/utils/Tickable.h
         src/main.cpp)
