--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
+# Project
 cmake_minimum_required(VERSION 3.16)
 project(gbtest)
 
-find_package(raylib 3.0 REQUIRED)
-
 set(CMAKE_CXX_STANDARD 17)
 
+# Dependencies
+find_package(raylib 3.0 CONFIG REQUIRED)
+
+# Target
 add_executable(gbtest
         src/cpu/interrupts/InterruptController.cpp
         src/cpu/interrupts/InterruptController.h
@@ -63,10 +66,10 @@ add_executable(gbtest
         src/utils/Tickable.h
         src/main.cpp)
 
-target_link_libraries(gbtest raylib)
+target_link_libraries(gbtest PRIVATE raylib)
 
 if (APPLE)
-    target_link_libraries(${PROJECT_NAME} "-framework IOKit")
-    target_link_libraries(${PROJECT_NAME} "-framework Cocoa")
-    target_link_libraries(${PROJECT_NAME} "-framework OpenGL")
+    target_link_libraries(gbtest PRIVATE "-framework IOKit")
+    target_link_libraries(gbtest PRIVATE "-framework Cocoa")
+    target_link_libraries(gbtest PRIVATE "-framework OpenGL")
 endif ()
