GitHub Actions: Build in Release mode

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -38,3 +38,4 @@ jobs:
         with:
           useVcpkgToolchainFile: true
           cmakeGenerator: '${{ matrix.cmakeGenerator }}'
+          cmakeBuildType: 'Release'
