OAMSearchPPUMode: Wrap buffer array around a class also containing the quantity of sprites in the buffer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -47,6 +47,8 @@ set(SOURCE_FILES
         ppu/oam/OAMDMA.cpp
         ppu/oam/OAMDMA.h
         ppu/oam/OAMEntry.h
+        ppu/oam/SpriteBuffer.cpp
+        ppu/oam/SpriteBuffer.h
         ppu/vram/VRAM.cpp
         ppu/vram/VRAM.h
         ppu/vram/VRAMTileData.cpp
