GameBoyFrequencies: Put platform frequencies in its own file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,7 @@ set(SOURCE_FILES
         platform/bus/Bus.h
         platform/GameBoy.cpp
         platform/GameBoy.h
+        platform/GameBoyFrequencies.h
         platform/bus/BusProvider.h
         platform/bus/BusRequestSource.h
         ppu/fifo/BackgroundFetcher.cpp
