Use miniaudio as the audio library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -71,6 +71,8 @@ set(SOURCE_FILES
         ppu/PPU.h
         ppu/PPURegisters.h
         utils/Tickable.h
+        miniaudio.cpp
+        miniaudio.h
         main.cpp)
 
 # Dependencies
