--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.16)
 project(gbtest)
 
 set(CMAKE_CXX_STANDARD 17)
+add_compile_options(-Wall -Wextra)
 
 # Subdirectories
 add_subdirectory(src)
