CMakeLists.txt: Fix compiler flags under MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,12 @@ cmake_minimum_required(VERSION 3.16)
 project(gbtest)
 
 set(CMAKE_CXX_STANDARD 17)
-add_compile_options(-Wall -Wextra)
+
+if (${CMAKE_CXX_COMPILER_ID} EQUAL MSVC)
+    add_compile_options(/Wall)
+else ()
+    add_compile_options(-Wall -Wextra)
+endif ()
 
 # Subdirectories
 add_subdirectory(src)
