--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,12 +32,12 @@ jobs:
 
       - uses: lukka/get-cmake@latest
 
-      - uses: lukka/run-vcpkg@main
+      - uses: lukka/run-vcpkg@v10
         with:
           setupOnly: true
           vcpkgGitCommitId: '${{ env.VCPKG_COMMIT }}'
 
-      - uses: lukka/run-cmake@main
+      - uses: lukka/run-cmake@v10
         with:
           useVcpkgToolchainFile: true
           cmakeGenerator: '${{ matrix.cmakeGenerator }}'
