--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,7 +23,9 @@ jobs:
 
     steps:
       - name: Install dependencies (ubuntu)
-        run: sudo apt install libasound2-dev mesa-common-dev libx11-dev libxrandr-dev libxi-dev xorg-dev libgl1-mesa-dev libglu1-mesa-dev
+        run: |
+          sudo apt update
+          sudo apt install libasound2-dev mesa-common-dev libx11-dev libxrandr-dev libxi-dev xorg-dev libgl1-mesa-dev libglu1-mesa-dev
         if: matrix.os == 'ubuntu-latest'
 
       - uses: actions/checkout@v2
