LengthCounter: Initial APU length counter support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,8 @@ set(SOURCE_FILES
         apu/units/APUUnit.h
         apu/units/FrameSequencer.cpp
         apu/units/FrameSequencer.h
+        apu/units/LengthCounter.cpp
+        apu/units/LengthCounter.h
         apu/units/PulseWavePatternDuty.h
         apu/APU.cpp
         apu/APU.h
