VolumeEnvelope: Initial APU volume envelope support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,8 @@ set(SOURCE_FILES
         apu/units/LengthCounter.cpp
         apu/units/LengthCounter.h
         apu/units/PulseWavePatternDuty.h
+        apu/units/VolumeEnvelope.cpp
+        apu/units/VolumeEnvelope.h
         apu/APU.cpp
         apu/APU.h
         apu/APURegisters.h
