FrequencySweep: Fix the frequency sweep implementation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,11 +18,11 @@ set(SOURCE_FILES
         apu/units/APUUnit.h
         apu/units/FrameSequencer.cpp
         apu/units/FrameSequencer.h
+        apu/units/FrequencySweep.cpp
+        apu/units/FrequencySweep.h
         apu/units/LengthCounter.cpp
         apu/units/LengthCounter.h
         apu/units/PulseWavePatternDuty.h
-        apu/units/Sweep.cpp
-        apu/units/Sweep.h
         apu/units/VolumeEnvelope.cpp
         apu/units/VolumeEnvelope.h
         apu/APU.cpp
